--- a/about.html
+++ b/about.html
@@ -1002,7 +1002,7 @@ Life Board Member</font></div></td>
 <td width="47" height="359"></td>
 <td width="15" height="359" colspan="1" rowspan="1" valign="top" align="left" xpos="105"><img src="images/logo-part7.gif" border="0" height="1" width="8"></td>
 <td width="74" height="359" colspan="1" rowspan="1" valign="top" align="left" xpos="120"><p><img src="images/logo-part8.gif" border="0" height="2" width="64"></p>
-<p><img src="newbuttons/ts_single_pixel.gif" name="spacer" width="1" height="20" id="spacer"><img src="images/ts_single_pixel.gif" name="spacer" width="10" height="1" id="spacer"> </p>
+<p><img src="images/ts_single_pixel.gif" name="spacer" width="1" height="20" id="spacer"><img src="images/ts_single_pixel.gif" name="spacer" width="10" height="1" id="spacer"> </p>
 <table width="100%" height="183" border="0" cellpadding="0" cellspacing="0" bgcolor="738ef0">
 <tr>
 <td height="32"><div align="center"><a href="javascript:;" onMouseOver="MM_showHideLayers('lavlayer1','','show','boardlav','','hide','singerslav','','hide','sponsorslav','','hide','advlav','','hide','layer1','','show','director','','show','janetlayerp','','hide','janetlayerw','','hide','about2','','hide','board','','hide','sponsors','','hide','advertisers','','hide','singers','','hide');MM_swapImage('DirectorMenu','','images/button-director-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-director-black1.gif" name="DirectorMenu" width="65" height="13" border="0" id="DirectorMenu"></a> </div></td>
