--- a/index.html
+++ b/index.html
@@ -213,59 +213,8 @@ height="45"></td>
 
 <!------ STOP COPYING ABOVE THIS LINE-------->
 
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Camerata Singers of Lake Forest website</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://cameratasingers.github.io" property="cc:attributionName" rel="cc:attributionURL">Camerata Singers of Lake Forest</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://cameratasingers.github.io" rel="dct:source">http://cameratasingers.github.io</a>.
 
 </div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
